# napm

./: Cargo.toml  PKGBUILD  README.md  broken-system.db
.cargo/: config.toml
src/: ansi.rs  error.rs  log.rs  main.rs  napm.rs  pkg.rs  util.rs
src/commands/: files.rs  find.rs  info.rs  install.rs  list.rs  query.rs  remove.rs  search.rs  update.rs  upgrade.rs
src/napm/: actions.rs  auto_repair.rs  cache.rs  init_system.rs  style.rs  util.rs
