[package]
name = "napm"
version = "0.1.0"
edition = "2024"

[dependencies]
alpm = "4.0.3"
alpm-sys = "4.0.3"
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
indicatif = "0.18.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
zstd = "0.13.3"
