[package]
name = "napm"
version = "0.1.1"
edition = "2024"

[dependencies]
alpm = "5.0.0"
alpm-sys = "4.0.3"
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
flate2 = "1.1.5"
indicatif = "0.18.2"
pacmanconf = "3.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
